--- a/openresty-debian/Dockerfile
+++ b/openresty-debian/Dockerfile
@@ -41,8 +41,6 @@ ENV REDIS_VERSION 6.0.16
 ENV REDIS_DOWNLOAD_URL http://download.redis.io/releases/redis-6.0.16.tar.gz
 ENV REDIS_DOWNLOAD_SHA 3639bbf29aca1a1670de1ab2ce224d6511c63969e7e590d3cdf8f7888184fa19
 
-COPY docker-entrypoint.sh /
-
 RUN set -eux; \
 	\
 	arch="$(dpkg --print-architecture)"; \
@@ -223,7 +221,6 @@ RUN set -eux; \
         ln -sf /dev/stdout /usr/local/openresty/nginx/access.log; \
         ln -sf /dev/stderr /usr/local/openresty/nginx/error.log; \
         mkdir /docker-entrypoint.d; \
-	chmod +x /docker-entrypoint.sh; \
 
 	apt-mark auto '.*' > /dev/null; \
 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; \
@@ -265,9 +262,14 @@ ENV PATH=$PATH:/usr/local/openresty/luajit/bin:/usr/local/openresty/nginx/sbin:/
 WORKDIR /usr/local/openresty
 COPY lua-script /usr/local/openresty/lua-script
 
+COPY docker-entrypoint.sh /
 COPY 10-listen-on-ipv6-by-default.sh /docker-entrypoint.d
 COPY 20-envsubst-on-templates.sh /docker-entrypoint.d
 COPY 30-tune-worker-processes.sh /docker-entrypoint.d
+
+RUN set -eux; \
+	chmod +x /docker-entrypoint.sh; \
+	chmod +x /docker-entrypoint.d/*
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
