--- a/openresty-debian/Dockerfile
+++ b/openresty-debian/Dockerfile
@@ -261,11 +261,13 @@ RUN set -eux; \
 ENV PATH=$PATH:/usr/local/openresty/luajit/bin:/usr/local/openresty/nginx/sbin:/usr/local/openresty/bin
 WORKDIR /usr/local/openresty
 COPY lua-script /usr/local/openresty/lua-script
+COPY nginx.vh.default.conf /usr/local/openresty/nginx/conf/nginx.conf
 
 COPY docker-entrypoint.sh /
 COPY 10-listen-on-ipv6-by-default.sh /docker-entrypoint.d
 COPY 20-envsubst-on-templates.sh /docker-entrypoint.d
 COPY 30-tune-worker-processes.sh /docker-entrypoint.d
+
 
 RUN set -eux; \
 	chmod +x /docker-entrypoint.sh; \
