--- a/openresty-debian/Dockerfile
+++ b/openresty-debian/Dockerfile
@@ -7,6 +7,8 @@ ENV OPENRESTY_DOWNLOAD_URL https://openresty.org/download/openresty-1.19.9.1.tar
 ENV NGINX_MODULE_VTS_DOWNLOAD_URL https://codeload.github.com/vozlt/nginx-module-vts/tar.gz/v0.1.18
 
 RUN set -eux; \
+	addgroup --system --gid 101 nginx; \
+    	adduser --system --disabled-login --ingroup nginx --no-create-home --home /nonexistent --gecos "nginx user" --shell /bin/false --uid 101 nginx; \
 	savedAptMark="$(apt-mark showmanual)"; \
 	apt-get update; \
 	# misc
@@ -91,7 +93,7 @@ RUN set -eux; \
         git clone https://github.com/knyar/nginx-lua-prometheus.git; \
         ln -sf /dev/stdout /usr/local/openresty/nginx/logs/access.log; \
         ln -sf /dev/stderr /usr/local/openresty/nginx/logs/error.log; \
-#        mkdir /docker-entrypoint.d; \
+        mkdir /docker-entrypoint.d; \
 
 	apt-mark auto '.*' > /dev/null; \
 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; \
@@ -115,10 +117,10 @@ COPY 20-envsubst-on-templates.sh /docker-entrypoint.d
 COPY 30-tune-worker-processes.sh /docker-entrypoint.d
 
 
-#RUN set -eux; \
-#        chown -R nginx.nginx /usr/local/openresty; \
-#	chmod +x /docker-entrypoint.sh; \
-#	chmod +x /docker-entrypoint.d/*
+RUN set -eux; \
+        chown -R nginx.nginx /usr/local/openresty; \
+	chmod +x /docker-entrypoint.sh; \
+	chmod +x /docker-entrypoint.d/*
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
