--- a/openresty-ubuntu/Dockerfile
+++ b/openresty-ubuntu/Dockerfile
@@ -6,7 +6,7 @@ ENV OPENRESTY_VERSION 1.19.9.1
 ENV OPENRESTY_DOWNLOAD_URL https://openresty.org/download/openresty-1.19.9.1.tar.gz
 ENV NGINX_MODULE_VTS_DOWNLOAD_URL https://codeload.github.com/vozlt/nginx-module-vts/tar.gz/v0.1.18
 
-RUN set -eux \
+RUN set -eux; \
         addgroup --system --gid 101 nginx; \
         adduser --system --disabled-login --ingroup nginx --no-create-home --home /nonexistent --gecos "nginx user" --shell /bin/false --uid 101 nginx; \
 	apt-get update; \
