--- a/openresty-ubuntu/Dockerfile
+++ b/openresty-ubuntu/Dockerfile
@@ -12,9 +12,10 @@ ENV NGINX_MODULE_VTS_DOWNLOAD_URL https://codeload.github.com/vozlt/nginx-module
 RUN set -eux; \
         addgroup --system --gid 101 nginx; \
         adduser --system --disabled-login --ingroup nginx --no-create-home --home /nonexistent --gecos "nginx user" --shell /bin/false --uid 101 nginx; \
-        savedAptMark="$(apt-mark showmanual)"; \
+        #savedAptMark="$(apt-mark showmanual)"; \
 	apt-get update; \
-	apt-get install -y --no-install-recommends \ 
+	#apt-get install -y --no-install-recommends \ 
+	apt-get install -y \ 
 		gcc \
 		git \
 		make \
@@ -54,19 +55,19 @@ RUN set -eux; \
         ln -sf /dev/stderr /usr/local/openresty/nginx/logs/error.log; \
         mkdir /docker-entrypoint.d; \
         mkdir /usr/local/openresty/lua-script; \
-        chown -R nginx.nginx /usr/local/openresty; \
+        chown -R nginx.nginx /usr/local/openresty
 	
-	apt-mark auto '.*' > /dev/null; \
-        [ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; \
-        find /usr/local -type f -executable -exec ldd '{}' ';' \
-                | awk '/=>/ { print $(NF-1) }' \
-                | sort -u \
-                | xargs -r dpkg-query --search \
-                | cut -d: -f1 \
-                | sort -u \
-                | xargs -r apt-mark manual \
-        ;\
-        apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false
+#	apt-mark auto '.*' > /dev/null; \
+#        [ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; \
+#        find /usr/local -type f -executable -exec ldd '{}' ';' \
+#                | awk '/=>/ { print $(NF-1) }' \
+#                | sort -u \
+#                | xargs -r dpkg-query --search \
+#                | cut -d: -f1 \
+#                | sort -u \
+#                | xargs -r apt-mark manual \
+#        ;\
+#        apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false
 
 
 ENV PATH=$PATH:/usr/local/openresty/luajit/bin:/usr/local/openresty/nginx/sbin:/usr/local/openresty/bin
