--- a/flink-scala_2.11-java11-debian/Dockerfile
+++ b/flink-scala_2.11-java11-debian/Dockerfile
@@ -52,8 +52,8 @@ ENV FLINK_TGZ_URL=https://www.apache.org/dyn/closer.cgi?action=download&filename
 # Prepare environment
 ENV FLINK_HOME=/opt/flink
 ENV PATH=$FLINK_HOME/bin:$PATH
-RUN groupadd --system --gid=999999 flink && \
-    useradd --system --home-dir $FLINK_HOME --uid=999999 --gid=flink flink
+RUN groupadd --system --gid=99999999 flink && \
+    useradd --system --home-dir $FLINK_HOME --uid=99999999 --gid=flink flink
 WORKDIR $FLINK_HOME
 
 # Install Flink
