--- a/flink/Dockerfile
+++ b/flink/Dockerfile
@@ -28,24 +28,18 @@ RUN set -ex; \
   chmod +x /usr/local/bin/gosu; \
   gosu nobody true
 
-# nss wrapper
-COPY passwd.template /tmp/passwd
-
-ENV USER_ID='$(id -u)'
-ENV GROUP_ID='$(id -g)'
-ENV LD_PRELOAD=/usr/lib64/libnss_wrapper.so
-ENV NSS_WRAPPER_PASSWD=/tmp/passwd
-ENV NSS_WRAPPER_GROUP=/etc/group
-
 # Configure Flink version
 ENV FLINK_TGZ_URL=https://www.apache.org/dyn/closer.cgi?action=download&filename=flink/flink-1.13.2/flink-1.13.2-bin-scala_2.11.tgz
 
 # Prepare environment
 ENV FLINK_HOME=/opt/flink
 ENV PATH=$FLINK_HOME/bin:$PATH
-#RUN groupadd --system --gid=9999 flink && \
-#    useradd --system --home-dir $FLINK_HOME --uid=9999 --gid=flink flink
+RUN groupadd --system --gid=9999 flink && \
+    useradd --system --home-dir $FLINK_HOME --uid=9999 --gid=flink flink
 WORKDIR $FLINK_HOME
+
+# nss wrapper
+COPY passwd.template .
 
 # Install Flink
 RUN set -ex; \
